# nextit

./: .gitignore  README.md
item-microservice/: .dockerfile  .dockerignore  Cargo.toml  Dockerfile  Justfile  build.rs
item-microservice/migrations/: 20231211160000_init.sql
item-microservice/src/: error.rs  main.rs
terraform/: .gitignore  .terraform.lock.hcl  00.main.tf  01.kubernetes.tf  02.authentik.tf  03.item-microservice.tf  04.web.tf  05.external-dns.tf  06.cert-manager.tf  Justfile  README.md  authentik-helm-values.yaml  main.tf  testing.auto.tfvars
web/: .env  .env.local  Dockerfile  docker-migrate-and-run.sh  next.config.js  package-lock.json  package.json
web/app/: globals.css  internpage.js  layout.js  page.js
web/app/api/auth/[...nextauth]/: route.js
web/app/api/items/: route.js
web/app/intern/: page.js
web/components/: demo.js  init-bootstrap.js  internnavbar.js  login-button.js  logout-button.js  navabar.js  public-content.js  public-homepage.js  public-slider.js  publicnavabar.js
web/components/intern/: intern-content.js  intern-homepage.js  intern-navbar.js  intern-post.js  logout-button.js
web/css/: custom.css  custom.css.map
web/lib/: auth.js  prisma.js
web/lib/items/: actions-http.js  actions-proto.js  actions.js  connection.js
web/proto/: item.proto  item_grpc_pb.d.ts  item_grpc_pb.js  item_pb.d.ts  item_pb.js
web/scss/: custom.scss
